--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -609,5 +609,8 @@ html {
 }
 
 @media screen and (max-width: 400px) {
+    .proofratings-badge.proofratings-badge-narrow {max-width: 80%; flex-wrap: wrap; justify-content: center;}
+    .proofratings-badge.proofratings-badge-narrow .proofratings-logos {flex: 0 0 100%; margin-right: 0; margin-bottom: 5px;}
     .proofratings-banner-badge .proofratings-logos {flex: 0 0 100%; margin: 0 0 20px }
+
 }
