--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -1,5 +1,7 @@
 .gap-30 {height: 30px;}
 
+.proofratings-instruction {font-size: 20px; font-weight: bold}
+
 table.form-table caption {
     text-align: left;
     font-size: 18px;
