--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -255,6 +255,7 @@ html {
     padding: unset;
     display: unset;
     min-height: unset;
+    margin-left: unset!important;
     border: unset!important;
     background-color: transparent;
     box-shadow: unset!important;
