--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -166,9 +166,8 @@ html {
 }
 
 
-.proofratings-review-widgets-grid.proofratings-widgets-grid-rectangle {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 260px))
-}
+.proofratings-review-widgets-grid.proofratings-widgets-grid-rectangle {grid-template-columns: repeat(auto-fit, minmax(200px, 260px))}
+.proofratings-review-widgets-grid.proofratings-widgets-grid-basic {grid-template-columns: repeat(auto-fit, minmax(130px, 1fr))}
 
 .proofratings-review-widgets-grid > * {margin-left: auto; margin-right: auto;}
 
