--- a/assets/css/proofratings.css
+++ b/assets/css/proofratings.css
@@ -100,6 +100,7 @@ html {
     margin-left: 7px;
     width: 97.5px!important;
     display: inline-block;
+    text-align: left!important;
     background-color: #ddd
 }
 
@@ -236,7 +237,7 @@ html {
     padding: 5px 12px;
     margin-top: 8px;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
     letter-spacing: 1px;
     background-color: var(--review_text_background, var(--themeColor, #0f7ff3));
     border-radius: 2px;
@@ -269,7 +270,7 @@ html {
 
 .proofratings-widget.proofratings-widget-basic .review-site-logo {height: 40px; margin-bottom: 10px;}
 
-.proofratings-widget.proofratings-widget-basic .proofratings-stars {margin-left: 0;}
+.proofratings-widget.proofratings-widget-basic .proofratings-stars {margin-left: 0}
 .proofratings-widget.proofratings-widget-basic .review-count {
     color: var(--review_count_textcolor, #8181ac);
     padding: unset;
@@ -303,6 +304,7 @@ html {
     display: unset;
     min-height: 121px;
     padding-top: 14px;
+    text-align: left;
     padding-bottom: 14px;
     border-color: var(--borderColor, transparent)
 }
