--- a/assets/css/proofratings-admin.css
+++ b/assets/css/proofratings-admin.css
@@ -1,3 +1,8 @@
+:root {
+    --primary_color: #4123FF;
+    --wrap_edge: 30px;
+}
+
 .gap-10 {height: 10px;}
 .gap-20 {height: 20px;}
 .gap-30 {height: 30px;}
@@ -428,3 +433,42 @@ body.proofratings-analytics #wpcontent {padding-left: 0}
 }
 
 #reporting-email-addresses li .remove:before {font-size: 16px;}
+
+#toplevel_page_proofratings .wp-submenu-head + li {display: none!important}
+
+.proofratings-dashboard-menu {
+    margin-top: -31px;
+    margin-inline: calc(var(--wrap_edge) * -1);
+}
+
+.proofratings-dashboard-menu a {
+    display: flex;
+    color: #6E7289;
+    position: relative;
+    text-decoration: none;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px var(--wrap_edge);
+    border-block: 1px solid #C5C6CD;
+    box-shadow: none!important;
+    margin-bottom: -1px;
+    padding-inline-start: calc(var(--wrap_edge) + 55px)!important;
+}
+
+.proofratings-dashboard-menu .menu-icon {
+    color: var(--primary_color);
+    top: calc(50% - 3px);
+    font-size: 35px;
+    position: absolute;
+    left: var(--wrap_edge);
+    transform: translateY(-50%);
+}
+
+.proofratings-dashboard-menu .menu-label {
+    color: var(--primary_color);
+    display: block;
+    font-size: 130%;
+    font-weight: bold;
+}
+
+.proofratings-dashboard-menu p {margin: 2px 0 0}
